feat: Homebank-zu-hledger Konverter (001)
Vollständige Python-CLI-Applikation zur Konvertierung von Homebank XHB-Dateien
in jahresweise hledger-Journal-Dateien mit deutschen Kontonamen.

- Parser: XHB-XML → typisiertes Datenmodell (Decimal für Beträge, date.fromordinal)
- Konverter: Kreditoren/Debitoren-Konten für Payees, Split-Transaktionen, kxfer-Deduplizierung
- Writer: Deutsches EUR-Format (decimal-mark ,), account/payee-Deklarationen, main.journal
- CLI: argparse, Exit-Codes 0-3, Fehler auf stderr
- 53 Tests: parser, converter, writer (alle bestanden)
- Qualitätsgates: ruff format, ruff check, mypy strict, pytest — alle grün

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ __pycache__/
 *.hledger
 *.journal
 
+# Speckit (ausführbare Skripts werden nicht versioniert)
+speckit/
+
+# Opencode
+.opencode/
+
 # C extensions
 *.so
 
